<resources>
    <string name="app_name">Tapcast</string>
    <string name="app_description">La nuova applicazione per seguire i tuoi podcast preferiti</string>
    <string name="login_google">Accedi con Google</string>

    <string name="google_token">950379948987-3flaqi21fbvkqnhj8mj977aeumehh0bh.apps.googleusercontent.com</string>
    <string name="registration_title">Crea il tuo profilo</string>
    <string name="profile_icon_description">Scegli la tua foto</string>
    <string name="username_hint">Inserisci username</string>
    <string name="profile_username_message">Questo è il nome con cui ti riconosceremo</string>
    <string name="registration_button">Salva informazioni</string>
    <string name="profile_icon_placeholder">Clicca qui per aggiungere una foto</string>
    <string name="arrowback_description">Indietro</string>
    <string name="permission_denied">Permesso non accettato</string>
    <string name="dashboard_search_hint">Cerca un podcast…</string>
    <string name="timeout_24_onetap">Hai effettuato troppe richieste, la funzionalità è stata temporaneamente bloccata da Google</string>
    <string name="connection_error">Connessione al server non riuscita</string>

    <string name="greeting1">Buongiorno, %s</string>
    <string name="greeting2">Buon pomeriggio, %s</string>
    <string name="greeting3">Buonasera, %s</string>
    <string name="settings_description">Vai a Impostazioni</string>
    <string name="podcast_description_label">Descrizione</string>
    <string name="duration_label">Durata</string>
    <string name="date_label">Data</string>
    <string name="authors_label">Autori</string>
    <string name="play_text">Play</string>
    <string name="episodes_label">Episodi</string>
    <string name="see_episodes_text">Vedi tutti gli episodi</string>
    <string name="today">Oggi</string>
    <string name="yesterday">Ieri</string>
    <string name="episodes">Episodi</string>
    <string name="text_divider">|</string>
    <string name="preference_account_category">Account</string>
    <string name="preference_view_summary">Visualizza il tuo profilo</string>
    <string name="account_logout_summary">Effettua il logout da questo dispositivo</string>
    <string name="account_logout_title">Logout</string>
    <string name="settings">Impostazioni</string>
    <string name="preference_streaming_category">Riproduzione</string>
    <string name="preference_info_category">Informazioni</string>
    <string name="preference_autoplay_title">Autoplay</string>
    <string name="preference_explicit_title">Consenti contenuti espliciti</string>
    <string name="preference_interruption_title">Senza interruzioni</string>
    <string name="preference_version_title">Versione</string>
    <string name="preference_terms_title">Termini e condizioni</string>
    <string name="preference_terms_summary">Leggi la normativa</string>
    <string name="preference_privacy_title">Informativa sulla privacy</string>
    <string name="preference_privacy_summary">Leggi l\'informativa</string>
    <string name="profile">Il tuo profilo</string>
    <string name="delete_profile_title">Elimina profilo</string>
    <string name="delete_profile_summary">I tuoi dati salvati saranno eliminati per sempre</string>
    <string name="delete_profile_message">Sei sicuro di voler eliminare il tuo profilo? Tutti i tuoi dati salvati saranno eliminati per sempre</string>
    <string name="confirm">Conferma</string>
    <string name="cancel">Annulla</string>
    <string name="wrong_account_error">Hai selezionato un account errato per l\'utente attuale, prova a scegliere l\'account corretto</string>
    <string name="account_logout_message">Sei sicuro di voler effettuare il logout?</string>
    <string name="account_logout_exit">Esci da Tapcast</string>
    <string name="pause_text">pause</string>
</resources>