<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PodcastFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/arrowback_description"
        app:icon="@drawable/arrow_back"
        app:iconSize="24dp"
        app:iconTint="?attr/colorOnBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragmentTitle"
        style="@style/TitleMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="@id/back_button"
        tools:text="Talking Funny" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constrainedHeight="true"
        android:layout_marginBottom="16dp"
        android:paddingBottom="16dp"
        android:clipToPadding="false"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintBottom_toTopOf="@id/play_button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/thumbnail_card"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="?attr/colorSurface"
                app:cardCornerRadius="@dimen/radius_small"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/profile_icon_description"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@drawable/thumbnail_2" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/description_label"
                style="@style/BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/podcast_description_label"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintTop_toBottomOf="@id/thumbnail_card" />

            <TextView
                android:id="@+id/description_text"
                style="@style/BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintTop_toBottomOf="@id/description_label"
                tools:text="Just two random guys talking funny on your favorite Monday podcast. We are Jack Saxe and Joseph Plantagenet, enjoy our show!" />

            <TextView
                android:id="@+id/duration_label"
                style="@style/BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/duration_label"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintTop_toBottomOf="@id/description_text" />

            <TextView
                android:id="@+id/duration_text"
                style="@style/BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintTop_toBottomOf="@id/duration_label"
                tools:text="1 h 35 min" />

            <TextView
                android:id="@+id/date_label"
                style="@style/BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/date_label"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintTop_toBottomOf="@id/duration_text" />

            <TextView
                android:id="@+id/date_text"
                style="@style/BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintTop_toBottomOf="@id/date_label"
                tools:text="19 Dic 2022" />

            <TextView
                android:id="@+id/authors_label"
                style="@style/BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/authors_label"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintTop_toBottomOf="@id/date_text" />

            <TextView
                android:id="@+id/authors_text"
                style="@style/BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintTop_toBottomOf="@id/authors_label"
                tools:text="Jack Saxe, Joseph Plantagenet" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/episodes_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:stateListAnimator="@animator/click_animator"
                app:layout_constraintTop_toBottomOf="@id/authors_text">

                <TextView
                    android:id="@+id/episodes_label"
                    style="@style/BodyLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/episodes_label"
                    android:textColor="?attr/colorOnBackground"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/episodes_text"
                    style="@style/BodyMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/see_episodes_text"
                    android:textColor="?attr/colorOnBackground"
                    app:layout_constraintEnd_toStartOf="@id/episodes_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/episodes_label" />

                <ImageView
                    android:id="@+id/episodes_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:importantForAccessibility="no"
                    app:layout_constraintBottom_toBottomOf="@id/episodes_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/episodes_text"
                    app:srcCompat="@drawable/icon_chevron_right"
                    app:tint="?attr/colorOnBackground" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/play_button"
        style="@style/BodyLarge"
        android:tag="@string/play_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/play_text"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>